<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/formulary"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textAllCaps="true"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="5dp"
                    android:inputType="text"/>
            <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="5dp"
                    android:inputType="textPassword"/>
            <EditText
                    android:id="@+id/etPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password2"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="5dp"
                    android:inputType="textPassword"/>
            <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="5dp"
                    android:inputType="textEmailAddress"/>
            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male"
                        android:onClick="onRadioButtonClicked"
                        android:checked="true"/>
                <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female"
                        android:onClick="onRadioButtonClicked"/>
            </RadioGroup>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hobbies"
                        android:textColor="@android:color/black"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"/>

                <CheckBox
                        android:id="@+id/cbSports"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/sports"
                        android:onClick="onCheckboxClicked"/>
                <CheckBox
                        android:id="@+id/cbReading"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/reading"
                        android:onClick="onCheckboxClicked"/>
                <CheckBox
                        android:id="@+id/cbCamping"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/camping"
                        android:onClick="onCheckboxClicked"/>
                <CheckBox
                        android:id="@+id/cbGames"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/video_games"
                        android:onClick="onCheckboxClicked"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                <Button
                        android:id="@+id/btBirth"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:onClick="ShowDataPicker"
                        android:text="@string/birth_day"
                        android:textAllCaps="false"
                        android:layout_weight="1"
                        android:background="@drawable/btbirth_background"/>
                <Spinner
                        android:id="@+id/spPlace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:entries="@array/city"
                        android:textAlignment="center">

                </Spinner>
            </LinearLayout>
            <Button
                    android:id="@+id/btSave"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:text="@string/save"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:background="@android:color/transparent"/>
            <TextView
                    android:id="@+id/tvShow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>